<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="medialib">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="get_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="email">sfinksbl@yandex.ru</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_result_search">Ничего не нашлось</string>
    <string name="error_bad_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="search_history_header">Вы искали</string>
    <string name="releaseDate">Год</string>
    <string name="placeholder_track_time">00:00</string>
    <string name="song_duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_is_empty">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_new_playlist">Название*</string>
    <string name="description_new_playlist">Описание</string>
    <string name="add_new_playlist">Создать</string>
    <string name="insertInPlaylist">Добавить в плейлист</string>
    <string name="confirm_playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="confirm_playlist_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cansel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="added_track_in_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="delete_track_question">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_question">Хотите удалить плейлист «%1$s» ?</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков</string>
    <string name="playback_channel_name">Playback</string>
    <string name="request_permission">В разрешении на уведомления отказано. Вы не увидите уведомления о воспроизведении, когда приложение свёрнуто.</string>
    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

</resources>