<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:navigationIcon="@drawable/back"
        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/padding_from_edges"
        android:paddingVertical="20dp"
        android:text="@string/dark_theme"
        android:textSize="@dimen/secondary_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="@dimen/padding_from_edges"
        android:paddingVertical="20dp"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="@dimen/padding_from_edges"
        android:paddingVertical="20dp"
        android:text="@string/get_support"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/right_arrow"
        android:paddingHorizontal="@dimen/padding_from_edges"
        android:paddingVertical="20dp"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size" />

</LinearLayout>