<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_playlist"
    tools:context=".library.ui.NewPlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_playlist_tb"
        style="@style/Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/back"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/ToolbarTitleText" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_tb"
        app:layout_constraintBottom_toTopOf="@id/new_playlist_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/new_playlist_iv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/rounded_dash_border"
                android:clipToOutline="true"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/new_playlist"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_playlist_name_til"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/name_new_playlist"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintTop_toBottomOf="@id/new_playlist_iv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPlaylistNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?attr/textColorSecondary"
                    android:textCursorDrawable="@drawable/search_cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_playlist_description_til"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_from_edges"
                android:hint="@string/description_new_playlist"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintTop_toBottomOf="@id/new_playlist_name_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_playlist_description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?attr/textColorSecondary" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_playlist_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="@dimen/padding_from_edges"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:background="@drawable/button_color"
        android:fontFamily="@font/ys_display_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/add_new_playlist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/secondary_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
